add #349 : Settle 페이지 구현
edit : settle 해야할 Review를 가져오는 findReviewsByNotSettle에서 유저정보와 팀 정보를 같이 가져옴
edit : javascript fetch, ajax 호출 시 url 경로 일부 수정 (./ -> /)
add : 유저 이미지 출력 및 settle review 출력을 위한 css 일부 추가
add : settle.html 화면 구현
add : data.sql에 settle 테스트를 위한 리뷰 데이터 추가
add : ReviewApiController에 settle이 필요한 남은 리뷰 count 요청 추가

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,3 +1,4 @@
+/*use profile-image round*/
 .square-l {
     height: 100px;
     width: 100px;
@@ -8,6 +9,12 @@
     height: 70px;
     width: 70px;
     line-height: 70px;
+}
+
+.square-s {
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
 }
 
 .img-rounded {
