--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -58,7 +58,7 @@
             let data;
             $.ajax({
                     type: "GET",
-                    url: "./api/v1/team/locations",
+                    url: "/api/v1/team/locations",
                     data: null,
                     async: false,
                     dataType: "JSON",
