add #349 : Settle_history 페이지 구현
add : SettleApiController의 pay-wallet을 올릴 수 있는 기능 추가
add : SettleService의 NeedPaid 조회, pay-wallet 반영 기능 추가
add : UserResponseDto 에 picture field 추가
add : SettleRepository에 pay-wallet을 진행할 settlelist 조회 쿼리 추가

--- a/src/main/resources/templates/admin/settle.html
+++ b/src/main/resources/templates/admin/settle.html
@@ -100,7 +100,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="correction-check-pass">
+                    <div align="right">
                         <button class="btn btn-primary" th:onclick="onclick_pass([[${review.id}]])">PASS</button>
                         <button class="btn btn-danger" th:onclick="onclick_fail([[${review.id}]])">FAIL</button>
                     </div>
