edit #349 : 일부 페이지 변경
delete : admin/home 제거
edit: header_admin의 버튼 활성화 버그 수정, settle, settle_history의 currentPage 변수 내역 미수정이 원인

--- a/src/main/resources/templates/admin/settle_history.html
+++ b/src/main/resources/templates/admin/settle_history.html
@@ -2,7 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default_layout_admin.html" th:with="currentPage='mentor_review'">
+      layout:decorator="layout/default_layout_admin.html" th:with="currentPage='admin/settle_history'">
 <head>
     <meta charset="UTF-8">
     <title>Settle History</title>
