--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -44,7 +44,7 @@
                    th:classappend="${currentPage} == 'list_team' ? 'active' : '' ">팀 목록</a>
             </li>
             <li th:if="${user != null && user.role.name == 'ADMIN'}">
-                <a href="/admin/index" class="nav-link"
+                <a href="/admin/settle" class="nav-link"
                    th:classappend="${currentPage} == 'admin' ? 'active' : '' ">관리자</a>
             </li>
         </ul>
