resolve #349 admin 정산기능 추가 (#358)
* add #349 : admin header 및 layout 추가

add : admin 전용 header인 header_admin.html 추가
add : admin 전용 layout인 default_layout_admin.html 추가 및 헤더 반영

* add #349 : 정산(Settle) Api 추가

add : Settle domain 설계
add : Settle Create, Read 추가

* add #349 : 정산(Settle) 페이지 추가

add : Settle 페이지 추가
add : Settle 추가 기능 설계

* add #349 : Settle 동작 시퀀스 구현 및 테스트

add : settle 해야할 Review를 가져오는 findReviewsByNotSettle 추가
add : settleTest 추가, 미허가 유저, settle 진행을 위한 findReview, settle 진행 여부 판단
add : schema에 settle table 추가

* add #349 : Settle 페이지 구현

edit : settle 해야할 Review를 가져오는 findReviewsByNotSettle에서 유저정보와 팀 정보를 같이 가져옴
edit : javascript fetch, ajax 호출 시 url 경로 일부 수정 (./ -> /)
add : 유저 이미지 출력 및 settle review 출력을 위한 css 일부 추가
add : settle.html 화면 구현
add : data.sql에 settle 테스트를 위한 리뷰 데이터 추가
add : ReviewApiController에 settle이 필요한 남은 리뷰 count 요청 추가

* add #349 : Settle_history 페이지 구현

add : SettleApiController의 pay-wallet을 올릴 수 있는 기능 추가
add : SettleService의 NeedPaid 조회, pay-wallet 반영 기능 추가
add : UserResponseDto 에 picture field 추가
add : SettleRepository에 pay-wallet을 진행할 settlelist 조회 쿼리 추가

* edit #349 : 일부 페이지 변경

delete : admin/home 제거
edit: header_admin의 버튼 활성화 버그 수정, settle, settle_history의 currentPage 변수 내역 미수정이 원인

* add #349 : MariaDB schema.sql settle table 추가

add : settle table 및 user, review FK 추가

--- a/src/main/resources/templates/fragment/header_admin.html
+++ b/src/main/resources/templates/fragment/header_admin.html
@@ -10,9 +10,10 @@
                 <strong th:text="${user.nickname}"></strong>
             </a>
             <ul class=" dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item" href="/">Signed in as <strong th:text="${user.nickname}"></strong></a>
+                <li><a class="dropdown-item" href="/admin/index">Signed in as <strong
+                        th:text="${user.nickname}"></strong></a>
                 </li>
-                <li><a class="dropdown-item" href="/">Profile</a></li>
+                <li><a class="dropdown-item" href="/admin/index">Profile</a></li>
                 <li>
                     <hr class="dropdown-divider">
                 </li>
@@ -28,24 +29,16 @@
         </div>
         <ul class="nav nav-pills">
             <li class="nav-item">
-                <a href="/" class="nav-link"
-                   th:classappend="${currentPage} == 'index' ? 'active' : '' ">홈</a>
-            </li>
-            <li class="nav-item">
-                <a href="/mentee" class="nav-link"
-                   th:classappend="${currentPage} == 'mentee' ? 'active' : '' ">멘티 신청</a>
-            </li>
-            <li class="nav-item">
-                <a href="/mentor" class="nav-link"
-                   th:classappend="${currentPage} == 'mentor' ? 'active' : '' ">멘토 신청</a>
-            </li>
-            <li class="nav-item">
-                <a href="/list_team" class="nav-link"
-                   th:classappend="${currentPage} == 'list_team' ? 'active' : '' ">팀 목록</a>
-            </li>
-            <li th:if="${user != null && user.role.name == 'ADMIN'}">
                 <a href="/admin/settle" class="nav-link"
-                   th:classappend="${currentPage} == 'admin' ? 'active' : '' ">관리자</a>
+                   th:classappend="${currentPage} == 'admin/settle' ? 'active' : '' ">정산하기</a>
+            </li>
+            <li class="nav-item">
+                <a href="/admin/settle_history" class="nav-link"
+                   th:classappend="${currentPage} == 'admin/settle_history' ? 'active' : '' ">정산확인</a>
+            </li>
+            <li th:if="${user != null}">
+                <a href="/" class="nav-link"
+                   th:classappend="${currentPage} == 'admin' ? 'active' : '' ">일반 페이지로</a>
             </li>
         </ul>
     </header>
